--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <title>Weather forecast</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -38,7 +39,8 @@
 
                             <div class="col-2">
                                 <div class="ms-1">
-                                    <input type="submit" value="Current" class="btn btn-outline-secondary" />
+                                    <input type="submit" value="Current" class="btn btn-outline-secondary"
+                                        id="currentButton" />
                                 </div>
                             </div>
                             <div class="col-2">
