--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/ed071607b6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="src\styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -189,7 +189,7 @@
             </div>
         </div>
     </div>
-    <script src="src\index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
