Added link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@
             </div>
         </div>
     </div>
+    <div class="source">
+        <a href="https://github.com/MagCost/Weather_app" alt="GitHub repository">
+            Open source by:
+        </a>
+    </div>
+    <div class="source_name">
+        Magda Costa
+    </div>
     <script src="index.js"></script>
 </body>
 
