--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
     </div>
     <span class="source">
-        <a href="https://github.com/MagCost/Weather_app" alt="GitHub repository">
+        <a href="https://github.com/MagCost/Weather_app" class="link_source" alt="GitHub repository">
             Open source by:
         </a>
     </span>
