--- a/index.html
+++ b/index.html
@@ -189,14 +189,16 @@
             </div>
         </div>
     </div>
-    <span class="source">
-        <a href="https://github.com/MagCost/Weather_app" class="link_source" alt="GitHub repository">
-            Open source by:
-        </a>
-    </span>
-    <span class="source_name">
-        Magda Costa
-    </span>
+    <div class="link_container">
+        <span class="source">
+            <a href="https://github.com/MagCost/Weather_app" class="link_source" alt="GitHub repository">
+                Open source by:
+            </a>
+        </span>
+        <span class="source_name">
+            Magda Costa
+        </span>
+    </div>
     <script src="index.js"></script>
 </body>
 
