Added target="_blank" attribute to link

--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
     <br>
     <div class="link_container">
         <span class="source">
-            <a href="https://github.com/MagCost/Weather_app" class="link_source" alt="GitHub repository">
+            <a href="https://github.com/MagCost/Weather_app" class="link_source" alt="GitHub repository"
+                target="_blank">
                 Open source by:
             </a>
         </span>
