Added information about wind speed in real time from API

--- a/index.html
+++ b/index.html
@@ -62,16 +62,15 @@
                                         <a href="#" id="temperature_celsius">ºC</a>
                                         <a href="#" id="temperature_farenheit">ºF</a>
                                     </span>
-                                    <span class="weather_icon">
+                                    <span class="weather_icon" id="weather_icon">
                                         <i class="fa-solid fa-cloud"></i>
                                     </span>
                                     <p class="today_is">
                                         <strong>
                                             Today is
                                         </strong>
-                                        cloudy. </br><span class="funny_sentence">Don't forget: Beautiful sunsets need
-                                            cloudy skies!
-                                        </span>
+                                        <span class="description_weather" id="description">
+                                            cloudy.</span> </br>
                                     </p>
                                 </div>
                             </div>
@@ -88,7 +87,7 @@
                                         Humidity:<span class="status_hum">66%</span>
                                     </li>
                                     <li>
-                                        Wind: <span class="status_wind">6km/t</span>
+                                        Wind: <span class="status_wind" id="wind"></span>
                                     </li>
                                 </ul>
                             </div>
