Added humidity info in real time from API
Also removed precipitation parameter from HTML

--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
                                 </div>
                                 <ul class="status">
                                     <li>
-                                        Precipitation: <span class="status_prec">0%</span>
-                                    </li>
-                                    <li>
-                                        Humidity:<span class="status_hum">66%</span>
+                                        Humidity:<span class="status_hum" id="humidity"></span>
                                     </li>
                                     <li>
                                         Wind: <span class="status_wind" id="wind"></span>
