Updated units from wind class

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                                     </span>
                                     <p class="today_is">
                                         <strong>
-                                            Today is
+                                            Today we have
                                         </strong>
                                         <span class="description_weather" id="description">
-                                            cloudy.</span> </br>
+                                        </span> </br>
                                     </p>
                                 </div>
                             </div>
@@ -81,10 +81,10 @@
                                 </div>
                                 <ul class="status">
                                     <li>
-                                        Humidity:<span class="status_hum" id="humidity"></span>
+                                        Humidity:<span class="status_hum" id="humidity">%</span>
                                     </li>
                                     <li>
-                                        Wind: <span class="status_wind" id="wind"></span>
+                                        Wind: <span class="status_wind" id="wind">m/s</span>
                                     </li>
                                 </ul>
                             </div>
