--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                                         <a href="#" id="temperature_celsius">ºC</a>
                                         <a href="#" id="temperature_farenheit">ºF</a>
                                     </span>
-                                    <span class="weather_icon" id="weather_icon">
-                                        <i class="fa-solid fa-cloud"></i>
+                                    <span class="weather_icon">
+                                        <img src="" class="fa-solid fa-cloud" id="icon"></i>
                                     </span>
                                     <p class="today_is">
                                         <strong>
@@ -77,7 +77,6 @@
 
                             <div class="col-5">
                                 <div class="city">
-                                    Mogreina
                                 </div>
                                 <ul class="status">
                                     <li>
