Added temperature conversion function

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <div class="row">
                             <div class="col-7">
                                 <div class="temperature">
-                                    <span class="temp" id="temperature">6</span>
-                                    <span class="links_temp">
-                                        <a href="#" id="temperature_celsius">ºC</a>
-                                        <a href="#" id="temperature_farenheit">ºF</a>
+                                    <span class="temp" id="temperature"></span>
+                                    <span class="links-temp">
+                                        <a href="#" id="celsius-link" class="active">ºC</a>
+                                        <a href="#" id="farenheit-link" class="link">ºF</a>
                                     </span>
                                     <span class="weather_icon">
                                         <img src="" class="fa-solid fa-cloud" id="icon"></i>
