moved forecast from html to js

--- a/index.html
+++ b/index.html
@@ -99,88 +99,7 @@
                 <h5 class="day_forecast">6-day forecast</h5>
             </div>
             </br>
-            <div class="card weather_forecast" style="width: 40rem;">
-                <div class="card-body">
-                    <div class="row forecast">
-                        <div class="col-2">
-                            <span class="weekday">
-                                Tuesday
-                            </span>
-                            <i class="fa-solid fa-cloud forecast_icon"></i>
-                            <div class="forecast_temperature">
-                                <strong>
-                                    0°
-                                </strong>
-                                14°
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <span class="weekday">
-                                Wednesday
-                            </span>
-                            <i class="fa-solid fa-sun forecast_icon"></i>
-                            <div class="forecast_temperature">
-                                <strong>
-                                    0°
-                                </strong>
-                                14°
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <span class="weekday">
-                                Thursday
-                            </span>
-                            <i class="fa-solid fa-sun forecast_icon"></i>
-                            <div class="forecast_temperature">
-                                <strong>
-                                    1°
-                                </strong>
-                                16°
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <span class="weekday">
-                                Friday
-                            </span>
-                            <i class="fa-solid fa-sun forecast_icon"></i>
-                            <div class="forecast_temperature">
-                                <strong>
-                                    2°
-                                </strong>
-                                17°
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <span class="weekday">
-                                Saturday
-                            </span>
-                            <i class="fa-solid fa-sun forecast_icon"></i>
-                            <div class="forecast_temperature">
-                                <strong>
-                                    22°
-                                </strong>
-                                14°
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <span class="weekday">
-                                Sunday
-                            </span>
-                            <i class="fa-solid fa-cloud-rain forecast_icon"></i>
-                            <div class="forecast_temperature">
-                                <strong>
-                                    2°
-                                </strong>
-                                7°
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="card weather_forecast" style="width: 40rem;" id="forecast">
             </div>
         </div>
     </div>
