added forecast to js

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h5 class="day_forecast">6-day forecast</h5>
             </div>
             </br>
-            <div class="card weather_forecast" style="width: 40rem;" id="forecast">
+            <div class="weather_forecast" style="width: 40rem;" id="forecast">
             </div>
         </div>
     </div>
