fixed issues the positioning of the boxes

--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
 </head>
 
 <body>
+
     <div class="container">
+
         </br>
         <div class="row justify-content-center">
             <div class="card" style="width: 40rem;">
                 <div class="card-body">
                     <form class="form-inline search">
                         <div class="row">
-                            <div class="col-5">
+                            <div class="col-md-6">
+
                                 <div class="ms-4">
                                     <input type="text" placeholder="Enter city name" class="form-control"
                                         id="cityName" />
@@ -49,13 +52,14 @@
                                     <span class="current-time">20:08</span>
                                 </div>
                             </div>
-                        </div>
+
                     </form>
 
                     <div class="container">
 
                         <div class="row">
-                            <div class="col-7">
+                            <div class="col-md-6">
+
                                 <div class="temperature">
                                     <span class="temp" id="temperature"></span>
                                     <span class="links-temp">
@@ -93,13 +97,16 @@
             </div>
         </div>
     </div>
-    <div class="container forecast">
-        <div class="card day_forecast" style="width: 40rem;">
-            <div class="card-body">
-                <h5 class="day_forecast">6-day forecast</h5>
-            </div>
-            </br>
-            <div class="weather_forecast" style="width: 40rem;" id="forecast">
+
+    <div class="bottom-box">
+        <div class="container forecast">
+            <div class="card day_forecast" style="width: 40rem;">
+                <div class="card-body">
+                    <h5 class="day_forecast">6-day forecast</h5>
+                </div>
+                </br>
+                <div class="weather_forecast" style="width: 40rem;" id="forecast">
+                </div>
             </div>
         </div>
     </div>
